# fullstack

./: .gitignore  README.md
backend/: .env  main.py  pyproject.toml  wave.db
backend/app/: database.py  seed.py
backend/app/models/: __init__.py  customer.py  estimate.py  item.py
backend/app/routers/: customers.py  estimates.py  items.py
backend/app/schemas/: __init__.py  customer.py  estimate.py  item.py
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/app/components/: Header.tsx  Providers.tsx  Sidebar.tsx
frontend/app/context/: EstimatesContext.tsx
frontend/app/estimates/[id]/: page.tsx
frontend/app/new/: page.tsx
frontend/app/utils/: api.ts  downloadReceipt.ts
